# design-patterns-python

./: README.md  pyproject.toml
docs/: 01_singleton.md  02_factory.md  03_builder.md  04_prototype.md  05_abstract_factory.md  06_adapter.md  07_decorator.md  08_facade.md  09_proxy.md  10_composite.md  11_bridge.md  12_strategy.md  13_observer.md  14_chain_of_responsibility.md  15_command.md  16_state.md  17_template_method.md  18_iterator.md  19_mediator.md  20_mvc.md  21_dependency_injection.md  22_repository.md
docs/oops/: 01_classes_and_objects.md  02_encapsulation.md  03_inheritance.md  04_polymorphism.md  05_abstraction.md  06_composition.md  07_solid_principles.md
examples/: runner.py
src/design_patterns/: __init__.py
src/design_patterns/architectural/: __init__.py  dependency_injection.py  mvc.py  repository.py
src/design_patterns/behavioral/: __init__.py  chain_of_responsibility.py  iterator.py  mediator.py  observer.py  state.py  strategy.py  template_method.py
src/design_patterns/creational/: __init__.py  abstract_factory.py  builder.py  factory.py  prototype.py  singleton.py
src/design_patterns/structural/: __init__.py  adapter.py  bridge.py  composite.py  decorator.py  facade.py  proxy.py
src/oops_concepts/: __init__.py  abstraction.py  classes_and_objects.py  composition.py  encapsulation.py  inheritance.py  polymorphism.py  solid_principles.py
