[project]
name = "design-patterns"
version = "1.0.0"
description = "A comprehensive collection of software design patterns implemented in Python with real-world examples"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
run-pattern = "examples.runner:main"

[dependency-groups]
dev = ["pytest>=8.0.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/design_patterns"]
